Added unittests and removed bugs from webpage functionality, cleaned up code

--- a/WebPipeline/WebPipeline/templates/index.html
+++ b/WebPipeline/WebPipeline/templates/index.html
@@ -21,7 +21,7 @@
   <div class="col-md-4">
     <h2>Results</h2>
     <p>
-      See your results in graphs, visualized for you! No need for logging in, you can just watch the stats as you go!
+      See your results in table form, full of helpful information! No need for logging in, you can just watch the stats as you go!
     </p>
     <p><a class="btn btn-default" href="/results">See Now &raquo;</a></p>
   </div>
