--- a/WebPipeline/WebPipeline/templates/module.html
+++ b/WebPipeline/WebPipeline/templates/module.html
@@ -13,7 +13,7 @@
     <div class="col-md-12" >
       <h2>Continue {{isBusy[1][0]}} {{isBusy[1][1]}} assignment</h2>
       <p>Continue your {{isBusy[1][0]}} {{isBusy[1][1]}} assignment from where you left off.</p>
-      <p><a class="btn btn-default" href="/assignment">Start Now &raquo;</a></p>
+      <p><a class="btn btn-primary" href="/assignment">Continue &raquo;</a></p>
     </div>
     {% endif %}
     {% for item in items %}
@@ -25,7 +25,7 @@
   <div class="col-md-4">
     <h2>Results</h2>
     <p>
-      See your results in graphs, visualized for you! No need for logging in, you can just watch the stats as you go!
+      See your results in table form, full of helpful information! No need for logging in, you can just watch the stats as you go!
     </p>
     <p><a class="btn btn-default" href="/results">See Now &raquo;</a></p>
   </div>
