--- a/WebPipeline/WebPipeline/templates/about.html
+++ b/WebPipeline/WebPipeline/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h3>{{ message }} {{ version }}</h3>
 
 <p>Loughton Languages suite was created as an assignment for the Hogeschool Rotterdam by <a href="http://www.iksman.com/">Wessel Meijer</a></p>
 
